--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
+  flutter_rating_bar: ^4.0.1
   flutter_riverpod: ^2.3.6
   go_router: ^7.0.1
   intl: ^0.18.1
