--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   go_router: ^7.0.1
   intl: ^0.18.1
+  rive: ^0.11.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
