two new constants added to .env document

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
 
 
 THE_MOVIEDB_KEY = 
+NO_ACTOR_POSTER_IMAGE = 'https://th.bing.com/th/id/OIP.OesLvyzDO6AvU_hYUAT4IAHaHa?w=219&h=219&c=7&r=0&o=5&pid=1.7'
+NO_MOVIE_POSTER_IMAGE = 'https://th.bing.com/th/id/OIP.59acm7M8zfvbkDUNHr6KdQAAAA?w=184&h=220&c=7&r=0&o=5&pid=1.7'
