--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   go_router: ^7.0.1
   intl: ^0.18.1
-  rive: ^0.11.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -58,6 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    # - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
