Add changes to .env and entity, and update dependencies.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
     "source.organizeImports": false
-  }
+  },
+  "cmake.configureOnOpen": true,
+  "cmake.sourceDirectory": "C:/Programming/Curso de Flutter/cinemapedia/windows/flutter"
 
 }
